[gd_scene load_steps=4 format=3 uid="uid://bhyquqjd50wp6"]

[ext_resource type="Script" path="res://misc/teleport bubble/bubble_teleport.gd" id="1_8wkpv"]
[ext_resource type="Texture2D" uid="uid://35i23hhccc8l" path="res://characters/Sprites/bubble.png" id="2_46vv3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rb576"]
radius = 20.0

[node name="BubbleTeleport" type="Node2D"]
script = ExtResource("1_8wkpv")
destination_location = Vector2(100, 100)
movement_speed = 0.5

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_46vv3")

[node name="ChangeDirectionTimer" type="Timer" parent="."]
autostart = true

[node name="BubblePopTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rb576")

[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BubblePopTimer" to="." method="_on_bubble_pop_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
